# C-like-syntax-compiler

./: CMakeLists.txt
include/: base.c  base.h
src/: main.c
src/Allocators/: Allocator.c  Allocator.h
src/c-lexer-syntactic-semantic-analysis/: README.md  lexer.c  lexer.h
src/c-lexer-syntactic-semantic-analysis/keywords/: keywords.c  keywords.h
src/c-lexer-syntactic-semantic-analysis/scanner/: scanner.c  scanner.h
src/c-lexer-syntactic-semantic-analysis/stack/: stack.c  stack.h
src/c-lexer-syntactic-semantic-analysis/token/: token.c  token.h
src/test/: lexer_test.c  program2.txt  program3.txt  test.h
